--- a/WebContent/css/home.css
+++ b/WebContent/css/home.css
@@ -52,17 +52,28 @@ div{
 }
 
 #core{
-	clear:both;
-}
+	/* clear:both;
+ */}
 
 #main{
 	width:500px;
 	padding:20px;
 	background:#fff;
-	border-top-left-radius:5px;
-	border-bottom-left-radius:5px;
+	border-top-left-radius:10px;
+	border-bottom-left-radius:10px;
+	float:left;
 	/* clear:both;
 	 */
+}
+
+#sidebar{
+	border-top-right-radius:10px;
+	border-bottom-right-radius:10px;
+	
+	width: 219px;
+	padding: 20px 0 20px 15px;
+    background: #e2f2da;
+	float:left;
 }
 
 #sysnotice{
