--- a/WebContent/css/home.css
+++ b/WebContent/css/home.css
@@ -1,90 +1,159 @@
 * {
 	margin: 0;
 	padding: 0;
-	font-family: HelveticaNeue,'Helvetica Neue',Helvetica,Arial,sans-serif;
+	font-family: HelveticaNeue, 'Helvetica Neue', Helvetica, Arial,
+		sans-serif;
 }
+
 body {
-    background-image: url(http://static.fanfou.com/img/bg/3.jpg);
-    background-repeat: repeat;
-    background-position: top left;
+	font-size: 12px;
+	background-image: url(http://static.fanfou.com/img/bg/3.jpg);
+	background-repeat: repeat;
+	background-position: top left;
 }
-div{
-	display:block;
+
+div {
+	display: block;
 }
-#container{
-	margin:0 auto;
-	width:775px;
+h2 {
+	font-size: 16px;
 }
-#header{
+textarea {
+    padding: 4px;
+    overflow: auto;
+}
+#container {
+	margin: 0 auto;
+	width: 775px;
+}
+
+#header {
 	float: none;
 	position: relative;
 	width: 100%;
 	padding: 1em 0;
 }
-#header p{
+
+#header p {
 	float: left;
 	width: 203px;
 	width: 244px;
 	height: 42px;
-	background: transparent url(http://static2.fanfou.com/img/fanfou_beta.png) 0 0 no-repeat;
+	background: transparent
+		url(http://static2.fanfou.com/img/fanfou_beta.png) 0 0 no-repeat;
 }
 
-#navigation{
+#navigation {
 	float: right;
-	margin-top:7px;
-	padding:7px 15px;
-	background-color:#FFFFFF;
-	border-radius:5px;
+	margin-top: 7px;
+	padding: 7px 15px;
+	background-color: #FFFFFF;
+	border-radius: 5px;
 }
-#navigation span{
+
+#navigation span {
 	text-decoration: none;
-	padding:2px 7px;
+	padding: 2px 7px;
 	font-size: 14px;
+}
+#navigation a{
+	text-decoration:none
+}
+#navigation a:link{
+	color: #990000;
+}
+#navigation a:visited{
+	color: #990000;
+}
+#navigation a:hover{
+	color: #fff;
+	background-color: #990000;
+}
+#navigation a:active{
+	
 }
 
 #header:after {
-    content: ".";
-    display: block;
-    font-size: 0;
-    line-height: 0;
-    clear: both;
-    visibility: hidden;
+	content: ".";
+	display: block;
+	font-size: 0;
+	line-height: 0;
+	clear: both;
+	visibility: hidden;
 }
 
-#core{
+#core {
 	/* clear:both;
- */}
+ */
+	
+}
 
-#main{
-	width:500px;
-	padding:20px;
-	background:#fff;
-	border-top-left-radius:10px;
-	border-bottom-left-radius:10px;
-	float:left;
+#core:after {
+	content: ".";
+	display: block;
+	font-size: 0;
+	line-height: 0;
+	clear: both;
+	visibility: hidden;
+}
+
+#main {
+	width: 500px;
+	padding: 20px;
+	background: #fff;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	float: left;
 	/* clear:both;
 	 */
 }
 
-#sidebar{
-	border-top-right-radius:10px;
-	border-bottom-right-radius:10px;
-	
+#sidebar {
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
 	width: 219px;
+	/* height:auto; */
+	margin: auto; padding : 20px 0 20px 15px;
+	background: #c0c0c0;
+	float: left;
 	padding: 20px 0 20px 15px;
-    background: #e2f2da;
-	float:left;
 }
 
-#sysnotice{
-	margin:0 0 10px;
-	padding:5px 10px;
-	background:#fffcaa;
+
+
+.clear {
+	clear: both;
+}
+
+#sysnotice {
+	margin: 0 0 10px;
+	padding: 5px 10px;
+	background: #fffcaa;
 	/* clear: both; */
 }
 
+#statusUpdate {
+	margin: 0 0 10px;
+}
+#status{
+	width: 482px;
+	height: 22px;
+	font-size: 14px;
+	resize: none;
+	box-shadow: 0 0 1px #AAA inset;
+	border: 1px solid #b9bcbe;
+}
 
-#statusUpdate{
-	margin:0 0 10px;
+#timeline-notification{
 	
+	margin: 0 0 10px;
+	padding: 6px 12px;
+	background: #fffcaa;
+	/* clear: both; */
+}
+
+.avatar img{
+	display:block;
+	heght:48px;
+	width:48px;
 }
